[package]
authors = ["Stepan <rsecktor@gmail.com>"]
categories = ["network-programming", "cryptography", "asynchronous"]
description = "Rust-библиотека для работы с WhatsApp Web API через Multi-Device, вдохновлена Baileys"
edition = "2021"
keywords = ["whatsapp", "rust", "websocket", "signal", "e2e"]
license = "MIT"
name = "endoxide"
readme = "README.md"
version = "0.1.0"

[dependencies]
# Асинхронность и сеть
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = [
  "rustls-tls-webpki-roots",
] }
url = "2.5.4"

# TLS
rustls = { version = "0.23.26", features = ["ring"] }

# WebSocket / Noise Protocol
snow = "0.9"

# Криптография
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
x25519-dalek = "2.0" # Или "1.2", если хочешь прямо как в примере

# End-to-End Encryption (альтернатива libsignal)
double-ratchet-rs = "0.4.6"
ockam_key_exchange_x3dh = "0.71"
# double-ratchet-2 = "0.5"  # Если предпочтёшь его — закомментируй выше

# Сериализация / работа с данными
bincode = "2.0.1"
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QR-коды и изображения
image = "0.25.6"
qrcode = "0.14.1"

# Парсинг
nom = "8.0.0"

# Хранение состояния
sled = "0.34"

# Обработка WhatsApp-специфичных XML-структур
quick-xml = { version = "0.37.5", features = ["serialize"] }

# Async-мьютексы
async-trait = "0.1"

# Временные метки
chrono = { version = "0.4.41", features = ["serde"] }

# Логирование и отладка
log = "0.4.27"
tracing = "0.1"
tracing-subscriber = "0.3"

# Прочие утилиты
anyhow = "1.0.98"
rand = "0.9.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.20"
prost-build = "0.13.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
